add installation of missing package seaborn

--- a/project.ipynb
+++ b/project.ipynb
@@ -343,6 +343,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "062a6f89-b65f-44e4-8bb8-e5f7ad99cd4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install Package\n",
+    "!pip install seaborn"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
    "id": "d05f53c1-b170-4a0f-ba38-8c0c75a32345",
    "metadata": {},
