--- a/project.ipynb
+++ b/project.ipynb
@@ -874,6 +874,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "4f7a2163-23dd-4edf-b0fd-0182c08ffcb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: scikit-learn in /opt/anaconda3/lib/python3.12/site-packages (1.5.1)\n",
+      "Requirement already satisfied: numpy>=1.19.5 in /opt/anaconda3/lib/python3.12/site-packages (from scikit-learn) (1.26.4)\n",
+      "Requirement already satisfied: scipy>=1.6.0 in /opt/anaconda3/lib/python3.12/site-packages (from scikit-learn) (1.13.1)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in /opt/anaconda3/lib/python3.12/site-packages (from scikit-learn) (1.4.2)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in /opt/anaconda3/lib/python3.12/site-packages (from scikit-learn) (3.5.0)\n",
+      "Requirement already satisfied: tabulate in /opt/anaconda3/lib/python3.12/site-packages (0.9.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Install Packages \n",
+    "!pip install scikit-learn\n",
+    "!pip install tabulate"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "fd53a7cd-7ee9-4897-a463-6da613d3571e",
    "metadata": {},
